--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <title>Vite + React</title>
 </head>
 
-<body>
-  <div id="root"></div>
+<body style="background-color: oklch(98.5% 0.001 106.423); width: 100%;">
+  <div id="root" style="width: 100%;"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
 
