--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite + React</title>
+  <title>Code Chase</title>
 </head>
 
-<body style="background-color: oklch(98.5% 0.001 106.423); width: 100%;">
+<body style="width: 100%;">
   <div id="root" style="width: 100%;"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
