--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <body style="width: 100%;">
   <div id="root" style="width: 100%;"></div>
+  <script src="https://cdn.jsdelivr.net/npm/@tsparticles/confetti@3.0.3/tsparticles.confetti.bundle.min.js"></script>
   <script type="module" src="/src/main.jsx"></script>
 </body>
 
